FAQ section overflow issue solve

--- a/css/style.css
+++ b/css/style.css
@@ -1317,8 +1317,10 @@ p.title span.badge {
     margin-top: 7%;
     padding-inline: 5%;
     display: grid;
+    min-width:100%;
     grid-template-columns: repeat(12, 1fr);
-    gap: 2em;
+        /* gap: 2em;
+        overflow:hidden; */
 }
 
 .faq__image {
@@ -1353,7 +1355,7 @@ p.title span.badge {
 .q__and__a .question {
     margin-top: 2em;
     padding: 0 2% 0 0;
-    width: 100%;
+    max-width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -1365,6 +1367,7 @@ p.title span.badge {
 }
 
 .q__and__a .answer {
+    max-width: 100%;
     margin: .7em 0 1em 0;
     font-family: var(--inter);
     font-weight: 500;
@@ -1384,10 +1387,7 @@ p.title span.badge {
 }
 
 @media screen and (max-width:1280px) {
-    .FAQ
-    {
-        gap: 2em;
-    }
+ 
     .faq__image {
         grid-column: 1/13;
         display: grid;
